# RAG-portfolio

./: .dockerignore  .gitignore  Dockerfile  README.md  check_collection_info.py  chunking.md  chunks.json  contents.example.json  contents.json  folder_str.txt  folder_str2.txt  local_chunk_test.py  main.py  pyproject.toml  schemas.py
.github/workflows/: upsert.yml
configs/: settings.py  tech_alias.json
server/: __init__.py  main.py  query_processing.py  retrieval_pipeline.py  routes.py  schemas.py  utils.py
src/: __init__.py
src/configs/: settings.py  tech_catalog.json
src/shared/: __init__.py  chunking.py  chunking_simple.py
src/shared/chunking/: __init__.py  builder.py  chunking_implementation.md  cli.py  entities.py  ids.py  io.py  utils.py
src/shared/embedding/: __init__.py  cli.py  fastembed_provider.py  ingest.py  logging.py  qdrant_store.py  retrieval.py  utils.py
system_prompts/: expansion_decomposition.txt  generation.txt
tests/: conftest.py  local_chunk_test.py
tests/chunking/: test_builder.py  test_entities.py  test_ids.py  test_settings.py  test_utils.py
tests/embedding/: __init__.py  test_fastembed_provider.py  test_ingest.py  test_logging.py  test_qdrant_store.py  test_retrieval.py  test_utils.py
