[project]
name = "rag-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comet-ml>=3.53.1",
    "fastapi>=0.119.0",
    "fastembed>=0.7.3",
    "litellm>=1.78.0",
    "opik>=1.8.68",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
embed-cli = "shared.embedding.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]
markers = [
  "unit: fast, pure-Python tests",
  "integration: hits filesystem, services, or optional deps",
]
